# bookspoiler_challenge

./: README.md  db.sqlite3  pyproject.toml
books/: models.py
books/migrations/: 0001_initial.py
bookspoiler/: settings.py  urls.py
challenges/: admin.py  models.py  serializers.py  urls.py  views.py
challenges/migrations/: 0001_initial.py
comments/: urls.py  views.py
comments/migrations/: 0001_initial.py
spoilers/: admin.py  apps.py  models.py
spoilers/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
