[tool.poetry]
name = "bookspoiler-04be"
version = "0.1.0"
description = ""
authors = ["LEE-Hyuna1229 <yung00420@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
